cc_binary(
    name = "issue4269",
    srcs = [
        "issue4269.cc",
    ],
    deps = [
        "//ortools/base",
        "//ortools/base:path",
        "//ortools/sat:cp_model",
        "//ortools/sat:cp_model_solver",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)
